src/errors
IMSRGSolver.cc: In member function ‘void IMSRGSolver::Solve_ode()’:
IMSRGSolver.cc:111:66: error: no matching function for call to ‘integrate_const(rk4, std::_Bind<std::_Mem_fn<void (IMSRGSolver::*)(const Operator&, Operator&, double)>(IMSRGSolver, std::_Placeholder<1>, std::_Placeholder<2>, std::_Placeholder<3>)>&, Operator&, int, double&, double&)’
    size_t steps = integrate_const(rk4(), system, H_s, 0, smax, ds);
                                                                  ^
IMSRGSolver.cc:111:66: note: candidates are:
In file included from /usr/include/boost/numeric/odeint.hpp:66:0,
                 from IMSRGSolver.cc:3:
/usr/include/boost/numeric/odeint/integrate/integrate_const.hpp:41:8: note: template<class Stepper, class System, class State, class Time, class Observer> size_t boost::numeric::odeint::integrate_const(Stepper, System, State&, Time, Time, Time, Observer)
 size_t integrate_const(
        ^
/usr/include/boost/numeric/odeint/integrate/integrate_const.hpp:41:8: note:   template argument deduction/substitution failed:
IMSRGSolver.cc:111:66: note:   deduced conflicting types for parameter ‘Time’ (‘int’ and ‘double’)
    size_t steps = integrate_const(rk4(), system, H_s, 0, smax, ds);
                                                                  ^
In file included from /usr/include/boost/numeric/odeint.hpp:66:0,
                 from IMSRGSolver.cc:3:
/usr/include/boost/numeric/odeint/integrate/integrate_const.hpp:68:8: note: template<class Stepper, class System, class State, class Time, class Observer> size_t boost::numeric::odeint::integrate_const(Stepper, System, const State&, Time, Time, Time, Observer)
 size_t integrate_const(
        ^
/usr/include/boost/numeric/odeint/integrate/integrate_const.hpp:68:8: note:   template argument deduction/substitution failed:
IMSRGSolver.cc:111:66: note:   deduced conflicting types for parameter ‘Time’ (‘int’ and ‘double’)
    size_t steps = integrate_const(rk4(), system, H_s, 0, smax, ds);
                                                                  ^
In file included from /usr/include/boost/numeric/odeint.hpp:66:0,
                 from IMSRGSolver.cc:3:
/usr/include/boost/numeric/odeint/integrate/integrate_const.hpp:98:8: note: template<class Stepper, class System, class State, class Time> size_t boost::numeric::odeint::integrate_const(Stepper, System, State&, Time, Time, Time)
 size_t integrate_const(
        ^
/usr/include/boost/numeric/odeint/integrate/integrate_const.hpp:98:8: note:   template argument deduction/substitution failed:
IMSRGSolver.cc:111:66: note:   deduced conflicting types for parameter ‘Time’ (‘int’ and ‘double’)
    size_t steps = integrate_const(rk4(), system, H_s, 0, smax, ds);
                                                                  ^
In file included from /usr/include/boost/numeric/odeint.hpp:66:0,
                 from IMSRGSolver.cc:3:
/usr/include/boost/numeric/odeint/integrate/integrate_const.hpp:111:8: note: template<class Stepper, class System, class State, class Time> size_t boost::numeric::odeint::integrate_const(Stepper, System, const State&, Time, Time, Time)
 size_t integrate_const(
        ^
/usr/include/boost/numeric/odeint/integrate/integrate_const.hpp:111:8: note:   template argument deduction/substitution failed:
IMSRGSolver.cc:111:66: note:   deduced conflicting types for parameter ‘Time’ (‘int’ and ‘double’)
    size_t steps = integrate_const(rk4(), system, H_s, 0, smax, ds);
                                                                  ^
make: *** [IMSRGSolver.o] Error 1
